Subiendo el proyecto final

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 spring.application.name=Proyecto-HotelReservas
+# Configuración de PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate - Para que cree las tablas automáticamente
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar las consultas en la consola (opcional)
 spring.jpa.show-sql=true
-server.port=8080
