--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # Mostrar las consultas en la consola (opcional)
 spring.jpa.show-sql=true
+
+# Clave secreta para firmar el token JWT (debe ser una cadena base64)
+jwt.secret=TuClaveSecretaSeguraDeAlMenos32Caracteres1234567890
+# Tiempo de expiración del token en milisegundos (ejemplo: 1 hora)
+jwt.expiration=86400000
